--- a/hr-payroll/src/main/resources/application.yaml
+++ b/hr-payroll/src/main/resources/application.yaml
@@ -1,6 +1,11 @@
 server:
-  port: 8082
+  port: 9002
 
 spring:
   application:
     name: hr-payroll
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8000/eureka
