--- a/hr-worker/src/main/resources/application.yaml
+++ b/hr-worker/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 9001
 
 spring:
   application:
@@ -21,3 +21,8 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8000/eureka
