Adicionado zuul gateway, adicionado hystrix e configurado projetos

--- a/discovery/build.gradle
+++ b/discovery/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'br.com.udemy.microservices'
+group = 'br.com.udemy.microservices.discovery'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
