--- a/hr-worker/src/main/resources/application.yaml
+++ b/hr-worker/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 9001
+  port: ${PORT:0}
 
 spring:
   application:
@@ -23,6 +23,8 @@ spring:
     show-sql: false
 
 eureka:
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8763/eureka
