--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -1,18 +1,12 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.4.RELEASE'
+    id 'org.springframework.boot' version '2.3.5.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
 }
 
-group = 'br.com.udemy.microservices.hr-payroll'
+group = 'br.com.udemy.microservices.gateway'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
 
 repositories {
     mavenCentral()
@@ -25,13 +19,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web',
             'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client',
-            'org.springframework.cloud:spring-cloud-starter-openfeign',
-            'org.springframework.cloud:spring-cloud-starter-netflix-ribbon',
-            'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
-
-    compileOnly 'org.projectlombok:lombok'
-
-    annotationProcessor 'org.projectlombok:lombok'
+            'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
