--- a/hr-payroll/src/main/resources/application.yaml
+++ b/hr-payroll/src/main/resources/application.yaml
@@ -1,11 +1,13 @@
 server:
-  port: 9002
+  port: ${PORT:0}
 
 spring:
   application:
     name: hr-payroll
 
 eureka:
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8763/eureka
