Adicionado config-server

--- a/hr-payroll/src/main/resources/application.yaml
+++ b/hr-payroll/src/main/resources/application.yaml
@@ -11,3 +11,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8763/eureka
+
+ribbon:
+  ConnectionTimeOut: 2000
+  ReadTimeOut: 4000
