--- a/hr-worker/build.gradle
+++ b/hr-worker/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa',
             'org.springframework.boot:spring-boot-starter-web',
             'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client',
-            'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
+            'org.springframework.cloud:spring-cloud-starter-netflix-ribbon',
+            'org.springframework.cloud:spring-cloud-starter-config',
+            'org.springframework.boot:spring-boot-starter-actuator'
 
     runtimeOnly 'com.h2database:h2'
 
