Adicionado projeto oauth2

--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -20,3 +20,7 @@ zuul:
     payroll:
       service-id: hr-payroll
       path: /hr-payroll/**
+    #hr-user
+    user:
+      service-id: hr-user
+      path: /hr-user/**
