--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -12,6 +12,11 @@ eureka:
 
 zuul:
   routes:
+    #hr-oauth
+    oauth:
+      service-id: hr-oauth
+      path: /hr-oauth/**
+      sensitive-headers: Cookie, Set-Cookie
     #hr-worker
     worker:
       service-id: hr-worker
