--- a/hr-config-server/src/main/resources/application.yaml
+++ b/hr-config-server/src/main/resources/application.yaml
@@ -8,6 +8,8 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/nelsonreisneto/microservices-udemy
+          default-label: master
+          uri: https://github.com/nelsonreisneto/microservices-udemy.git
+          search-paths: configs
           username: nelsonr.neto@hotmail.com
           password: N3t0@1608
