--- a/hr-user/build.gradle
+++ b/hr-user/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'org.springframework.boot' version '2.3.5.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'java'
+    id 'org.springframework.boot' version '2.3.5.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'java'
 }
 
 group = 'br.com.udemy.microservices'
@@ -9,41 +9,41 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 ext {
-	set('springCloudVersion', "Hoxton.SR8")
-	mapstructVersion = "1.4.1.Final"
+    set('springCloudVersion', "Hoxton.SR8")
+    mapstructVersion = "1.4.1.Final"
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa',
-			'org.springframework.boot:spring-boot-starter-web',
-			'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client',
-			'org.springframework.cloud:spring-cloud-starter-netflix-ribbon',
-			'org.springframework.cloud:spring-cloud-starter-config',
-			'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa',
+            'org.springframework.boot:spring-boot-starter-web',
+            'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client',
+            'org.springframework.cloud:spring-cloud-starter-netflix-ribbon',
+            'org.springframework.cloud:spring-cloud-starter-config',
+            'org.springframework.boot:spring-boot-starter-actuator'
 
-	runtimeOnly 'com.h2database:h2'
+    implementation fileTree(dir: 'libs', include: '*.jar')
+    runtimeOnly 'com.h2database:h2'
 
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+    compileOnly "org.mapstruct:mapstruct:${mapstructVersion}",
+            'org.projectlombok:lombok:1.18.12'
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}",
+            'org.projectlombok:lombok:1.18.12'
 
-	compileOnly "org.mapstruct:mapstruct:${mapstructVersion}",
-			'org.projectlombok:lombok:1.18.12'
-
-	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}",
-			'org.projectlombok:lombok:1.18.12'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
