--- a/hr-user/build.gradle
+++ b/hr-user/build.gradle
@@ -19,20 +19,16 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa',
+            "org.mapstruct:mapstruct-jdk8:${mapstructVersion}",
             'org.springframework.boot:spring-boot-starter-web',
             'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client',
             'org.springframework.cloud:spring-cloud-starter-netflix-ribbon',
-            'org.springframework.cloud:spring-cloud-starter-config',
-            'org.springframework.boot:spring-boot-starter-actuator'
-
-    implementation fileTree(dir: 'libs', include: '*.jar')
+            'org.springframework.cloud:spring-cloud-starter-config'
     runtimeOnly 'com.h2database:h2'
-
     compileOnly "org.mapstruct:mapstruct:${mapstructVersion}",
             'org.projectlombok:lombok:1.18.12'
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}",
             'org.projectlombok:lombok:1.18.12'
-
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
@@ -42,6 +38,14 @@ dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
+}
+
+compileJava {
+    options.compilerArgs += [
+            '-Amapstruct.suppressGeneratorTimestamp=true',
+            '-Amapstruct.suppressGeneratorVersionInfoComment=true',
+            '-Amapstruct.verbose=true'
+    ]
 }
 
 test {
